envoy-gateway/envoy-front-cm.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-gateway
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - address:
            socket_address:
              address: 0.0.0.0
              port_value: 80
          filter_chains:
              - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    codec_type: auto
                    stat_prefix: ingress_http
                    http_filters:
                      - name: envoy.filters.http.compressor
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.compressor.v3.Compressor
                          response_direction_config:
                            common_config:
                              min_content_length: 100
                              content_type:
                                - text/html
                                - application/json
                            disable_on_etag_header: true
                          request_direction_config:
                            common_config:
                              enabled:
                                default_value: false
                                runtime_key: request_compressor_enabled
                          compressor_library:
                            name: text_optimized
                            typed_config:
                              "@type": type.googleapis.com/envoy.extensions.compression.gzip.compressor.v3.Gzip
                              memory_level: 3
                              window_bits: 10
                              compression_level: BEST_COMPRESSION
                              compression_strategy: DEFAULT_STRATEGY
                      - name: envoy.filters.http.router
                        typed_config: 
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                    route_config:
                      name: local_route
                      virtual_hosts:
                      - name: service
                        domains:
                        - "*"
                        routes:
                        - match:
                            prefix: "/httpbin/"
                          route:
                            prefix_rewrite: "/"
                            cluster: httpbin
      clusters:
      - name: httpbin
        type: STRICT_DNS
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: httpbin
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: ${SERVICE_NAME}
                    port_value: ${SERVICE_PORT}
    admin:
      access_log_path: "/dev/stdout"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
