envoy-gateway/envoy-front-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy-gateway
  template:
    metadata:
      labels:
        app: envoy-gateway
    spec:
      containers:
      - name: envoy-gateway
        image: envoyproxy/envoy:v1.20-latest
        resources: {}
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: envoy-gateway-config
          mountPath: /etc/envoy
      volumes:
      - name: envoy-gateway-config
        configMap:
          name: envoy-gateway
