envoy-gateway/envoy-front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gateway
spec:
  type: LoadBalancer
  selector:
    app: envoy-gateway
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 80
